[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["VolodymyrMamaevsky <vova.moder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"
databases = "^0.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.6.0"
uvicorn = "^0.32.0"
aiohttp = "^3.10.10"
python-dotenv = "^1.0.1"
email-validator = "^2.2.0"
python-multipart = "^0.0.16"
alembic = "^1.13.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
